<resources>
    <string name="app_name">EletricCarApp2</string>
    <string name="title">EletricCar</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="pot_ncia">Potência</string>
    <string name="recarga">Recarga</string>
    <string name="_23_min">23 Min</string>
</resources>