<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
        android:text="@string/carros"/>

    <TextView
        android:id="@+id/tv_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_carros"
        app:layout_constraintTop_toTopOf="@id/tv_carros"
        android:text="@string/favoritos"/>
    
    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/eletric_car"
        app:layout_constraintTop_toBottomOf="@+id/tv_carros"
        app:layout_constraintLeft_toLeftOf="@id/tv_titulo"
        />

    <TextView
        android:id="@+id/tv_preco"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/preco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_image" />


    <TextView
        android:id="@+id/tv_preco_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="R$ 300.000,00"
        app:layout_constraintStart_toEndOf="@id/tv_preco"
        app:layout_constraintTop_toBottomOf="@id/iv_image" />

    <TextView
        android:id="@+id/tv_bateria"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/bateria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_preco" />

    <TextView
        android:id="@+id/tv_bateria_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="300 Kwh"
        app:layout_constraintStart_toEndOf="@id/tv_preco"
        app:layout_constraintTop_toTopOf="@id/tv_bateria" />

    <TextView
        android:id="@+id/tv_potencia"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/pot_ncia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria" />

    <TextView
        android:id="@+id/tv_potencia_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="600 Cv"
        app:layout_constraintStart_toEndOf="@id/tv_potencia"
        app:layout_constraintTop_toTopOf="@id/tv_potencia" />

    <TextView
        android:id="@+id/tv_recarga"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/recarga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia" />

    <TextView
        android:id="@+id/tv_recarga_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_23_min"
        app:layout_constraintStart_toEndOf="@id/tv_recarga"
        app:layout_constraintTop_toTopOf="@id/tv_recarga" />


    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enviar"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>

<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:orientation="vertical"-->
<!--    android:paddingLeft="16dp"-->
<!--    android:paddingRight="16dp">-->

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Olá mundo!"/>-->

<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"/>-->

<!--</LinearLayout>-->

<!--<RelativeLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:paddingRight="16dp"-->
<!--    android:paddingLeft="16dp">-->

<!--    <EditText-->
<!--        android:id="@+id/nome"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Nome" />-->

<!--    <EditText-->
<!--        android:id="@+id/sobreN"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/nome"-->
<!--        android:hint="Sobrenome"/>-->

<!--    <TextView-->
<!--        android:id="@+id/cidade"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Cidade: São Paulo"-->
<!--        android:layout_below="@id/sobreN"/>-->

<!--    <TextView-->
<!--        android:id="@+id/gosto_musical"-->
<!--        android:layout_width="96dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/cidade"-->
<!--        android:text="Gosto Musical"/>-->

<!--    <Button-->
<!--        android:id="@+id/Enviar"-->
<!--        android:layout_width="96dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/gosto_musical"-->
<!--        android:text="Enviar"/>-->


<!--</RelativeLayout>-->